<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_default_margin"
        android:layout_marginTop="@dimen/top_default_margin"
        android:text="@string/login_user_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_default_margin"
        android:layout_marginTop="@dimen/top_default_margin"
        android:layout_marginEnd="@dimen/right_default_margin"
        android:inputType="text"
        android:minHeight="@dimen/edit_text_min_height"
        android:hint="@string/login_user_login_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUser" />

    <TextView
        android:id="@+id/textViewPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_default_margin"
        android:layout_marginTop="@dimen/top_default_margin"
        android:text="@string/login_user_pw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUser" />

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_default_margin"
        android:layout_marginTop="@dimen/top_default_margin"
        android:layout_marginEnd="@dimen/right_default_margin"
        android:inputType="number"
        android:minHeight="@dimen/edit_text_min_height"
        android:hint="@string/login_user_pw_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewPw" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/black"
        android:textColor="@color/white"

        android:layout_marginStart="@dimen/left_default_margin"
        android:layout_marginTop="@dimen/top_default_margin"
        android:layout_marginEnd="@dimen/right_default_margin"
        android:text="@string/login_buttom_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/white"
        android:textColor="@color/black"

        android:layout_marginTop="@dimen/top_default_margin"
        android:layout_marginEnd="@dimen/right_default_margin"
        android:text="@string/login_buttom_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <Button
        android:id="@+id/buttonForgotPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/black"
        android:textColor="@color/white"

        android:layout_marginTop="@dimen/top_default_margin"
        android:layout_marginEnd="@dimen/right_default_margin"
        android:text="@string/login_buttom_forgotPW"
        app:layout_constraintEnd_toStartOf="@+id/buttonRegister"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        android:onClick="forgotPW"
        />

</androidx.constraintlayout.widget.ConstraintLayout>